--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,8 @@
             </svg>
           </span>
         </label>
-
+{% for my_page in site.pages %}
+  {% if my_page.hide_header_link %}{% continue %}{% endif %}
         <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
