--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,5 +8,5 @@
 
 @import "{{ site.theme }}";
 .markdown-body {
-  font-family:  "Gill Sans Extrabold", sans-serif;
+  font-family:  "'OpenSans-Semibold';
 }
