--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,11 @@ a {
     color: #467970; /* Change this to your desired link color */
     font-weight: bold; /* Make the link text bold */
 }
+a:visited {
+    color: #467970; /* Ensure visited links have the same color */
+    font-weight: bold; /* Ensure visited links are bold */
+   /* text-decoration: none; Optional: remove underline */
+}
 
 /* Optional: Change the color of links when hovered over */
 a:hover {
