added preload on the cards images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="https://troykyo.github.io/dssloopholes.github.io/assets/Acard.png" as="image">
+  <link rel="preload" href="https://troykyo.github.io/dssloopholes.github.io/assets/Bcard.png" as="image">
+  <link rel="preload" href="https://troykyo.github.io/dssloopholes.github.io/assets/Ccard.png" as="image">
+  <link rel="preload" href="https://troykyo.github.io/dssloopholes.github.io/assets/Dcard.png" as="image">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
