--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,15 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FC1PV13XNJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FC1PV13XNJ');
+</script>
   
 </head>
