--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,14 +15,14 @@
 
   {%- include custom-head.html -%}
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FC1PV13XNJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMQ6B7H48E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FC1PV13XNJ');
+  gtag('config', 'G-WMQ6B7H48E');
 </script>
   
 </head>
