--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
             <img src="https://github.com/troykyo/dssloopholes.github.io/raw/main/assets/Logos.png" alt="Manual Image" style="width:90%; height:auto;">
         </a>
         <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://circularloopholes.net">The Loopholes Toolkit</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://transitionsproject.eu">the Transitions project partners</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""></a></p>
+        <p>Co-funded by the European Union. Views and opinions expressed are however those of the author(s) only and do not necessarily reflect those of the European Union or the European Education and Culture Executive Agency (EACEA). Neither the European Union nor EACEA can be held responsible for them.</p>
 
       {%- if site.author %}
         <ul class="contact-list">
